BUILD.log
--------------- Build Started: 02/28/2024 14:02:47 Project: w06_criticalRegion, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\Dabbiru Sunil\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\My_Files\College_Documents\AMA EOS\EOS\LAB\LAB_2_Submission\Json Parser\code\w06_criticalRegion.cydsn\w06_criticalRegion.cyprj" -d CY8C5888LTQ-LP097 -s "C:\My_Files\College_Documents\AMA EOS\EOS\LAB\LAB_2_Submission\Json Parser\code\w06_criticalRegion.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: fit.M0032: warning: Clock Warning: (TFT_SPI_IntClock's accuracy range '72 MHz +/- 0.25%, (71.82 MHz - 72.18 MHz)' is not within the specified tolerance range '66 MHz +/- 5%, (62.7 MHz - 69.3 MHz)'.).
 * C:\My_Files\College_Documents\AMA EOS\EOS\LAB\LAB_2_Submission\Json Parser\code\w06_criticalRegion.cydsn\w06_criticalRegion.cydwr (TFT_SPI_IntClock)
 * C:\Program Files (x86)\Cypress\PSoC Creator\4.4\PSoC Creator\psoc\content\CyComponentLibrary\CyComponentLibrary.cylib\SPI_Master_v2_50\SPI_Master_v2_50.cysch (Instance:IntClock)
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 6 pin(s) will be assigned a location by the fitter: TFT_CS(0), TFT_DC(0), TFT_LED(0), TFT_RES(0), TFT_SCL(0), TFT_SDA(0)
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
Warning: sta.M0019: w06_criticalRegion_timing.html: Warning-1366: Setup time violation found in a path from clock ( TFT_SPI_IntClock ) to clock ( TFT_SPI_IntClock ). (File=C:\My_Files\College_Documents\AMA EOS\EOS\LAB\LAB_2_Submission\Json Parser\code\w06_criticalRegion.cydsn\w06_criticalRegion_timing.html)
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I.\source\asw -I.\source\bsw -I.\source\bsw\cdd -I.\source\bsw\TraceRecorder -I.\source\bsw\TraceRecorder\config -I.\source\bsw\TraceRecorder\include -I.\source\bsw\TraceRecorder\streamport -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/ErikaOS_1_cortex_mx_ee_utils.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c Generated_Source\PSoC5\ErikaOS_1_cortex_mx_ee_utils.c -o .\CortexM3\ARM_GCC_541\Debug\ErikaOS_1_cortex_mx_ee_utils.o
Generated_Source\PSoC5\ErikaOS_1_cortex_mx_ee_utils.c: In function 'EE_system_init':
Generated_Source\PSoC5\ErikaOS_1_cortex_mx_ee_utils.c:98:2: error: #error The Interrupt isr_DEBUG_tx could not be found. Make sure the name in the OS config exactly matches the name of the interrupt in the interrupt tab.
 #error  The Interrupt isr_DEBUG_tx could not be found. Make sure the name in the OS config exactly matches the name of the interrupt in the interrupt tab.
  ^
Generated_Source\PSoC5\ErikaOS_1_cortex_mx_ee_utils.c:106:2: error: #error The Interrupt isr_DEBUG_rx could not be found. Make sure the name in the OS config exactly matches the name of the interrupt in the interrupt tab.
 #error  The Interrupt isr_DEBUG_rx could not be found. Make sure the name in the OS config exactly matches the name of the interrupt in the interrupt tab.
  ^
Generated_Source\PSoC5\ErikaOS_1_cortex_mx_ee_utils.c:69:17: warning: unused variable 'ramVectorTable' [-Wunused-variable]
   cyisraddress *ramVectorTable = *CY_INT_VECT_TABLE;
                 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 02/28/2024 14:02:58 ---------------
